plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.15'  // Use a compatible version
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.apptware'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'com.h2database:h2:2.2.224'
    testImplementation 'org.assertj:assertj-core:3.25.3'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
